--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,96 +1,3 @@
-/*-----------------------------------*\
-  #CUSTOM PROPERTIES
-\*-----------------------------------*/
-
-// primary colors
-$moderate-violet: hsl(263, 55%, 52%);
-$very-dark-grayish-blue: hsl(217, 19%, 35%);
-$very-dark-blackish-blue: hsl(219, 29%, 14%);
-$white: hsl(0, 0%, 100%);
-//   neutral colors
-$light-gray: hsl(0, 0%, 81%);
-$light-grayish-blue: hsl(210, 46%, 95%);
-//   typography
-$ff-barlow: 'Barlow Semi Condensed', sans-serif;
-$font-medium: 500;
-$font-semibold: 600;
-$text-md: 1.3rem;
-$text-lg: 2.14rem;
-$review-leading-md: 2rem;
-// others
-$bd-radius: 1rem;
-$flex-gap: 1.5rem;
-$verified-color: hsla(0, 0%, 81%, 0.5);
-$quote-color: hsla(0, 0%, 81%, 0.7);
-
-/*-----------------------------------*\
-  #RESET
-\*-----------------------------------*/
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: $ff-barlow;
-}
-
-body {
-  font-size: $text-md;
-}
-
-// grid-container
-.grid-container {
-  max-width: 90%;
-  margin: 8rem auto;
-}
-
-// user card
-.user-card {
-  padding: 3rem;
-  display: flex;
-  gap: $flex-gap;
-  flex-direction: column;
-  color: $light-gray;
-  border-radius: $bd-radius;
-  &--violet {
-    position: relative;
-    background-color: $moderate-violet;
-  }
-  &__review {
-    font-size: $text-lg;
-    color: $light-grayish-blue;
-    z-index: 1;
-  }
-  &__quote {
-    line-height: $review-leading-md;
-    color: $quote-color;
-  }
-}
-
-.info-container {
-  display: flex;
-  align-items: center;
-  gap: $flex-gap;
-  &__avatar {
-    width: 3.5rem;
-    border-radius: 50%;
-    border: 3px solid $verified-color;
-  }
-  &-data__status {
-    color: $verified-color;
-  }
-}
-
-// quotation marks svg
-.quotation-svg {
-  width: 11rem;
-  position: absolute;
-  top: 0;
-  right: 2.25rem;
-}
+@use './main';
+@use './components/testimonial-grid-container';
+@use './components/testimonial-card';
