Added tablet  media queries and gh-pages package

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,1 +1,17 @@
-*,:after,:before{box-sizing:border-box;margin:0;padding:0}html{font-family:Barlow Semi Condensed,sans-serif;font-size:62.5%}body{background-color:#ecf2f8;font-size:1.4rem}
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: "Barlow Semi Condensed", sans-serif;
+}
+
+body {
+  font-size: 1.4rem;
+  background-color: hsl(210deg, 46%, 95%);
+}
