--- a/src/sass/components/testimonial-card.scss
+++ b/src/sass/components/testimonial-card.scss
@@ -23,7 +23,7 @@
     background-color: $very-dark-blackish-blue;
   }
   &__review {
-    font-size: $text-lg;
+    font-size: $text-xl;
     font-weight: $font-semibold;
     color: $light-grayish-blue;
     z-index: 1;
