--- a/src/sass/abstracts/fonts.scss
+++ b/src/sass/abstracts/fonts.scss
@@ -3,5 +3,7 @@ $font-medium: 500;
 $font-semibold: 600;
 $text-sm: 1.4rem;
 $text-md: 1.6rem;
-$text-lg: 2rem;
+$text-lg: 1.8rem;
+$text-xl: 2rem;
+$text-2xl: 2.4rem;
 $review-leading-md: 2rem;
