Deployment with gh-pages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,109 +1,1 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-  font-family: "Barlow Semi Condensed", sans-serif;
-}
-
-body {
-  font-size: 1.4rem;
-  background-color: hsl(210deg, 46%, 95%);
-}
-
-.grid-container {
-  margin: 4rem 0;
-  display: grid;
-  grid-template-columns: 85%;
-  gap: 3rem;
-  justify-content: center;
-}
-
-.user-card {
-  padding: 3rem;
-  display: flex;
-  gap: 1.5rem;
-  flex-direction: column;
-  color: hsl(0deg, 0%, 81%);
-  border-radius: 1rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-}
-.user-card--violet {
-  position: relative;
-  background-color: hsl(263deg, 55%, 52%);
-}
-.user-card--grayish {
-  background-color: hsl(217deg, 19%, 35%);
-}
-.user-card--white {
-  background-color: hsl(0deg, 0%, 100%);
-  color: hsl(217deg, 19%, 35%);
-}
-.user-card--blackish {
-  background-color: hsl(219deg, 29%, 14%);
-}
-.user-card__review {
-  font-size: 2rem;
-  font-weight: 600;
-  color: hsl(210deg, 46%, 95%);
-  z-index: 1;
-}
-.user-card__review--dark {
-  color: hsl(219deg, 29%, 14%);
-}
-.user-card__quote {
-  font-weight: 600;
-  line-height: 2rem;
-  color: hsla(0deg, 0%, 81%, 0.7);
-}
-.user-card__quote--dark {
-  color: hsla(217deg, 19%, 35%, 0.7);
-}
-
-.info-container {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-}
-.info-container__avatar {
-  width: 4rem;
-  border-radius: 50%;
-  border: 3px solid hsla(0deg, 0%, 81%, 0.5);
-}
-.info-container__avatar--dark-border {
-  border-color: hsl(0deg, 0%, 81%);
-}
-.info-container-data__name {
-  font-size: 1.6rem;
-}
-.info-container-data__status {
-  color: hsla(0deg, 0%, 81%, 0.5);
-}
-.info-container-data__status--dark {
-  color: hsla(217deg, 19%, 35%, 0.5);
-}
-
-.quotation-svg {
-  width: 11rem;
-  position: absolute;
-  top: 0;
-  right: 2.25rem;
-}
-
-.attribution {
-  margin: 2rem;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-  font-size: 1.4rem;
-}
-.attribution a {
-  text-decoration: none;
-  color: hsl(263deg, 55%, 52%);
-}
+*,:after,:before{box-sizing:border-box;margin:0;padding:0}html{font-family:Barlow Semi Condensed,sans-serif;font-size:62.5%}body{background-color:#ecf2f8;font-size:1.4rem}.grid-container{display:grid;gap:3rem;grid-template-columns:85%;justify-content:center;margin:4rem 0}.user-card{border-radius:1rem;box-shadow:0 50px 100px -20px rgba(50,50,93,.25),0 30px 60px -30px rgba(0,0,0,.3);color:#cfcfcf;display:flex;flex-direction:column;gap:1.5rem;padding:3rem}.user-card--violet{background-color:#7541c8;position:relative}.user-card--grayish{background-color:#48556a}.user-card--white{background-color:#fff;color:#48556a}.user-card--blackish{background-color:#19212e}.user-card__review{color:#ecf2f8;font-size:2rem;font-weight:600;z-index:1}.user-card__review--dark{color:#19212e}.user-card__quote{color:hsla(0,0%,81%,.7);font-weight:600;line-height:2rem}.user-card__quote--dark{color:rgba(72,85,106,.7)}.info-container{align-items:center;display:flex;gap:1.5rem}.info-container__avatar{border:3px solid hsla(0,0%,81%,.5);border-radius:50%;width:4rem}.info-container__avatar--dark-border{border-color:#cfcfcf}.info-container-data__name{font-size:1.6rem}.info-container-data__status{color:hsla(0,0%,81%,.5)}.info-container-data__status--dark{color:rgba(72,85,106,.5)}.quotation-svg{position:absolute;right:2.25rem;top:0;width:11rem}.attribution{display:flex;flex-wrap:wrap;font-size:1.4rem;gap:.5rem;justify-content:center;margin:2rem}.attribution a{color:#7541c8;text-decoration:none}
