--- a/src/sass/abstracts/others.scss
+++ b/src/sass/abstracts/others.scss
@@ -2,8 +2,7 @@
 $bd-radius: 1rem;
 $flex-gap: 1.5rem;
 $verified-color: hsla(0, 0%, 81%, 0.5);
-$quote-color: hsla(0, 0%, 81%, 0.7);
+$quote-color: hsl(0 0% 79% / 1);
 $dark-verified-color: hsla(217, 19%, 35%, 0.5);
-$dark-quote-color: hsla(217, 19%, 35%, 0.7);
-$shadow-md: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-  rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+$dark-quote-color: hsl(217 19% 35% / 1.7);
+$shadow-md: 1rem 1rem 8rem -1rem #cfcfcf;
