--- a/src/sass/desktop.scss
+++ b/src/sass/desktop.scss
@@ -1,12 +1,16 @@
 @use './abstracts/' as *;
 
 .grid-container {
-  grid-template-columns: repeat(4, 27rem);
+  grid-template-columns: repeat(4, 27.75rem);
 }
 
 .user-card {
-  padding: 4rem;
+  padding: 3.2rem;
+  gap: 2.25rem;
   &--violet {
+    background-position: right 20% top 0;
+    background-size: 13rem;
+
     grid-column: 1 / 3;
   }
   &--blackish {
