--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,33 @@ html {
 }
 
 body {
+  display: flex;
+  padding-bottom: 1rem;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
   font-size: $text-sm;
   background-color: $light-grayish-blue;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4rem 0;
+}
+
+.sr-only {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
+  clip-path: inset(50%);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+  white-space: nowrap;
 }
